kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: galactic-gateway
spec:
  selector:
    app: galactic-gateway
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: LoadBalancer
