kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: galactic-gateway
spec:
  rules:
  - host: galactic-gateway.com
    http:
      paths:
      - path: /
        backend:
          serviceName: galactic-gateway
          servicePort: 3000
